--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -26,5 +26,5 @@ jobs:
           SONAR_HOST_URL: https://sonarcloud.io
         with:
           args: >
-            -Dsonar.projectKey=Corpo-Padle
+            -Dsonar.projectKey=Corpo-Padel
             -Dsonar.organization=qhorgues
